codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__visual_review__welcome_dark_80x24.snap
---
source: tui/src/chatwidget/tests/visual_review.rs
expression: normalize_snapshot_paths(text)
---



  >_ Codex

  What would you like to build?
  A question, an idea, a task. Start anywhere.

  Guarded access · /permissions

  ╭ Message ───────────────────────────────────────────────────── enter send ╮
  │ › Ask Codex to do anything                                               │
  ╰ / commands · @ files ────────────────────────────────── ctrl + j newline ╯
    GPT 5.6 Sol · Default reasoning · C:\work\atlas



    /plan    Shape an idea
    /review  Review changes
    /resume  Pick up a thread
